--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
   <h1>HiOffer.com</h1>
   <p>This domain name <i></i>is <strong>not for sale</strong>,<i></i> just a parked<sup>(not)</sup> domain<sup>(in
     use)</sup>.</p>
-  <address>&copy;2025 <a href="https://www.hioffer.com/">HiOffer.com</a> | <a href="https://web.co.ltd/">About Web.Co.Ltd</a></address>
+  <address>&copy;2025 <a href="https://www.hioffer.com/">HiOffer.com</a> | <a title="GZWEB.CN" href="https://www.gzweb.cn/" one-link-mark="yes" target="_blank">About US</a></address>
 </div>
 <!-- partial:index.partial.html -->
 <canvas></canvas>
